# teensy4-rs-template

./: .genignore  Cargo.toml  LICENSE-APACHE  README.md  hardware-test.bat  hardware-test.sh  install-cargo-generate.sh
.github/workflows/: cron.yml  update-ci.yml
src/: logging.rs  main.rs
